crates/swc_ecma_parser/tests/test262-error-references/fail/c045e273186c0644.js.stderr
error: assignment property is invalid syntax
 --> $DIR/tests/test262-parser/fail/c045e273186c0644.js:1:9
  |
1 | ({a: 0, b = 0});
  |         ^^^^^

